--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,18 +1,21 @@
 set -g prefix C-q # change shortcut from ctrl+b to ctrl+q
 set -g default-command zsh
+unbind C-b
+bind q send-prefix
 
 #-- base --#
 # set -g default-terminal "tmux-256color"
 if-shell "[[ `tmux -V |cut -d ' ' -f2` -ge 2.1  ]]" 'set -g mouse on'
 if-shell "[[ `tmux -V |cut -d ' ' -f2` -lt 2.0  ]]" 'set -g mode-mouse on'
-setw -g mode-keys vi
-set-option -g history-limit 10000
 # set -g renumber-windows   on    # 关掉某个窗口后，编号重排
 if-shell "[[ `tmux -V |cut -d ' ' -f2` -lt 2.0 ]]" 'setw -g uft8 on'
 if-shell "[[ `tmux -V |cut -d ' ' -f2` -ge 2.1 ]]" 'set-option -gq status-uft8 on'
 
 #-- bindkeys --#
 # 绑定hjkl键为面板切换的上下左右键
+# -r表示可重复按键，大概500ms之内
+# -n 表示不需要 prefix
+# -T tmux-command key do something
 bind-key -r k select-pane -U # 绑定k为↑
 bind-key -r j select-pane -D # 绑定j为↓
 bind-key -r h select-pane -L # 绑定h为←
@@ -22,16 +25,23 @@ bind-key -r K resizep -U 10 # 绑定Ctrl+k为往↑调整面板边缘10个单元
 bind-key -r J resizep -D 10 # 绑定Ctrl+j为往↓调整面板边缘10个单元格
 bind-key -r H resizep -L 10 # 绑定Ctrl+h为往←调整面板边缘10个单元格
 bind-key -r L resizep -R 10 # 绑定Ctrl+l为往→调整面板边缘10个单元格
+bind-key > swap-pane -D
+bind-key < swap-pane -U
+bind-key | swap-pane
+
+# C-q Space   Select next layout
+# C-q !       Break pane to a new window
+bind-key -r M-! join-pane -t :1
+bind-key -r M-@ join-pane -t :2
+bind-key -r M-# join-pane -t :3
+bind-key -r M-$ join-pane -t :4
+bind-key -r M-% join-pane -t :5
+bind-key -r M-^ join-pane -t :6
+bind-key -r M-& join-pane -t :7
+bind-key -r M-* join-pane -t :8
+bind-key -r M-( join-pane -t :9
 
 bind-key R source-file ~/.tmux.conf \; display-message "Config Reloaded."
-#自动重命名窗口名字
-set -g automatic-rename on
-# 关掉某个窗口后，编号重排
-set -g renumber-windows   on
-# 编号从 1 开始
-set -g base-index 1
-setw -g pane-base-index 1
-# set -g allow-rename off
 bind-key -T copy-mode-vi v send-keys -X begin-selection # 绑定v键为开始选择文本
 bind-key -T copy-mode-vi y send-keys -X copy-selection # 绑定y键为复制选中文本
 
@@ -69,11 +79,27 @@ set -g @dracula-show-powerline true
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-# ESC delay after prefix (ms) for vim
-set -sg escape-time 10
 
 bind-key -T prefix M-h run -b "source ~/.tmux/help.tmux && show_menu"
 # bind-key -n M-h run -b "source ~/.tmux/help.tmux && show_menu"
 
 # switch windows alt+number
 # bind-key -r M-1 select-window -t 1
+# -- general
+# ESC delay after prefix (ms) for vim
+set -sg escape-time 10
+setw -g mode-keys vi
+set-option -g history-limit 10000
+#自动重命名窗口名字
+set -g automatic-rename on
+# 关掉某个窗口后，编号重排
+set -g renumber-windows   on
+# 编号从 1 开始
+set -g base-index 1
+setw -g pane-base-index 1
+# set -g allow-rename off
+set -sg repeat-time 300
+set -s focus-events on
+set -g visual-activity off
+setw -g monitor-activity off
+setw -g monitor-bell off
