--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -22,7 +22,7 @@
         "showStatus": true,
         // like 'errormessage'
         "allowCompoundWords": false,
-        "ignoreWords": ["ASML", "asml", "behaviour", "clangd", "cmake", "fftwf", "fplan", "FFTW"],
+        "ignoreWords": ["ASML", "asml", "behaviour", "clangd", "cmake", "fftwf", "fplan", "FFTW", "ysize"],
         "cSpell.ignorePaths": [
             "node_modules", // this will ignore anything the node_modules directory
             "**/node_modules", // the same for this one
@@ -61,7 +61,6 @@
             "--header-insertion=iwyu",
             "--background-index",
             "--cross-file-rename",
-            "--all-scopes-completion",
             "--fallback-style=LLVM",
             "-j=12"
         ],
