--- a/.config/clangd/config.yaml
+++ b/.config/clangd/config.yaml
@@ -1,118 +1,13 @@
 Diagnostics:
   UnusedIncludes: Strict
-  ClangTidy:
-    Add: [
-      boost-use-to-string,
-      bugprone-assert-side-effect,
-      bugprone-branch-clone,
-      bugprone-fold-init-type,
-      bugprone-incorrect-roundings,
-      bugprone-infinite-loop,
-      bugprone-integer-division,
-      bugprone-macro-parentheses,
-      bugprone-macro-repeated-side-effects,
-      bugprone-misplaced-operator-in-strlen-in-alloc,
-      bugprone-misplaced-pointer-arithmetic-in-alloc,
-      bugprone-misplaced-widening-cast,
-      bugprone-not-null-terminated-result,
-      bugprone-shared-ptr-array-mismatch,
-      google-build-explicit-make-pair,
-      google-build-explicit-make-pair,
-      google-build-namespaces,
-      google-build-using-namespace,
-      google-default-arguments,
-      google-explicit-constructor,
-      google-global-names-in-headers,
-      google-readability-avoid-underscore-in-googletest-name,
-      google-readability-casting,
-      google-runtime-operator,
-      llvm-namespace-comment,
-      misc-definitions-in-headers,
-      misc-static-assert,
-      misc-unconventional-assign-operator,
-      misc-uniqueptr-reset-release,
-      misc-unused-alias-decls,
-      misc-unused-parameters,
-      misc-unused-using-decls,
-      misc-use-anonymous-namespace,
-      modernize-avoid-bind,
-      modernize-concat-nested-namespaces,
-      modernize-deprecated-headers,
-      modernize-deprecated-ios-base-aliases,
-      modernize-loop-convert,
-      modernize-make-shared,
-      modernize-make-unique,
-      modernize-pass-by-value,
-      modernize-raw-string-literal,
-      modernize-replace-auto-ptr,
-      modernize-replace-random-shuffle,
-      modernize-return-braced-init-list,
-      modernize-shrink-to-fit,
-      modernize-type-traits,
-      modernize-unary-static-assert,
-      modernize-use-auto,
-      modernize-use-bool-literals,
-      modernize-use-default-member-init,
-      modernize-use-emplace,
-      modernize-use-equals-default,
-      modernize-use-equals-delete,
-      modernize-use-nodiscard,
-      modernize-use-noexcept,
-      modernize-use-nullptr,
-      modernize-use-override,
-      modernize-use-uncaught-exceptions,
-      modernize-use-using,
-      readability-else-after-return,
-      readability-avoid-const-params-in-decls,
-      readability-avoid-unconditional-preprocessor-if,
-      readability-braces-around-statements,
-      readability-const-return-type,
-      readability-container-contains,
-      readability-container-data-pointer,
-      readability-container-size-empty,
-      readability-convert-member-functions-to-static,
-      readability-delete-null-pointer,
-      readability-duplicate-include,
-      readability-function-cognitive-complexity,
-      readability-function-size,
-      readability-inconsistent-declaration-parameter-name,
-      readability-make-member-function-const,
-      readability-misleading-indentation,
-      readability-misplaced-array-index,
-      readability-non-const-parameter,
-      readability-qualified-auto,
-      readability-redundant-control-flow,
-      readability-redundant-declaration,
-      readability-redundant-function-ptr-dereference,
-      readability-redundant-member-init,
-      readability-redundant-preprocessor,
-      readability-redundant-smartptr-get,
-      readability-redundant-string-cstr,
-      readability-simplify-boolean-expr,
-      readability-simplify-subscript-expr,
-      readability-static-definition-in-anonymous-namespace,
-      readability-string-compare,
-      readability-uniqueptr-delete-release,
-      readability-uppercase-literal-suffix,
-      cppcoreguidelines-pro-type-member-init,
-      performance-*,
-      pion-*
-      ]
-    Remove: [
-      pion-header-guard
-      ]
-    CheckOptions:
-      bugprone-misplaced-widening-cast.CheckImplicitCasts: true,
-      cppcoreguidelines-pro-type-member-init.UseAssignment: true
 
 Index:
   Background: Build
 CompileFlags:
-    Add: [-Wall, -Wextra, -Werror, -fsanitize=undefined, -Wno-format-security, -DNODEBUG, -mavx, --std=c++17]
+    Add: [-Wall, -Wextra, -Werror, -mavx, --std=c++17, -stdlib=libc++]
     Remove: [-Wduplicated-cond, -Wformat-overflow=2, -Wno-class-memaccess, -fno-lifetime-dse, -fno-lifetime-dse]
     Compiler: clang++
 InlayHints:
-    Enabled: No
+    Enabled: Yes
     ParameterNames: Yes
     DeducedTypes: Yes
-
